// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FindAnimalBreed /> Snaphot must match findCatBreedRender 1`] = `
<div
  className="breed"
>
  <div
    className="breedSearch"
  >
    <input
      className="breedSearchInput input"
      onKeyUp={[Function]}
    />
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      Search Cat
    </button>
  </div>
  <div
    className="breedShow"
  >
    <div
      className="image"
    >
      <img
        alt="cute cat"
        src="https://66.media.tumblr.com/tumblr_m4iejdP8Hb1qd477zo1_250.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`<FindAnimalBreed /> Snaphot must match findDogBreedRender 1`] = `
<div
  className="breed"
>
  <div
    className="breedSearch"
  >
    <input
      className="breedSearchInput input"
      onKeyUp={[Function]}
    />
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      Search Dog
    </button>
  </div>
  <div
    className="breedShow"
  >
    <div
      className="image"
    >
      <img
        alt="cute dog"
        src="https://images.dog.ceo/breeds/collie-border/n02106166_1031.jpg"
      />
    </div>
  </div>
</div>
`;
